hyejin completed menu 31.1, did some of 32.1, & clean ups

--- a/ConversionApp/ConversionApp/styles/style.css
+++ b/ConversionApp/ConversionApp/styles/style.css
@@ -3,18 +3,18 @@
     background-color:aliceblue;
 }
 
-    .light div {
-        background-color:white;
-    }
+.light div {
+    background-color:white;
+}
 
 .dark {
     color:gainsboro;
     background-color: black;
 }
 
-    .dark div {
-        background-color: gray;
-    }
+.dark div {
+    background-color: gray;
+}
 
 #lightBtn {
     background: url(../images/sun.png) no-repeat;
@@ -36,4 +36,8 @@
 
 .hide {
     display: none;
+}
+
+h2 {
+    margin-left: 20px;
 }
