--- a/ConversionApp/ConversionApp/styles/style.css
+++ b/ConversionApp/ConversionApp/styles/style.css
@@ -1,19 +1,75 @@
-﻿.light {
-    color: black;
-    background-color:aliceblue;
+﻿/* start of sil */
+
+#apiDetails table {
+    min-width: 400px;
+    width: 90%;
+    margin: auto;
+    border: solid 2px black;
 }
 
-.light div {
+#apiDetails img {
+    display: block;
+    margin: auto;
+}
+
+#apiDetails td, #apiDetails tr {
+    border: solid 1px black;
+}
+
+#apiDetails td {
+    padding: 10px;
+    width: 50%;
+}
+
+#convSelector {
+    padding: 10px;
+}
+
+#convSelector option, #converterForm option {
+    padding: 10px;
+}
+
+#convSelector option:not(:first-child):hover {
+    padding-left: 25px;
+    font-weight: bold;
+}
+
+#convSelector option:first-child {
+    color: gray;
+}
+
+#converterForm option:hover {
+    padding-left: 15px;
+    font-weight: bold;
+}
+
+#linkRec, #linkFav, #linkOut {
+    display: none;
+}
+
+.icon {
+    width: 20px;
+    height: 20px;
+    display: block;
+    margin: auto;
+}
+
+#lightBtn, #darkBtn, #user {
+    float: right;
+}
+
+#user {
+    margin: 15px 10px;
+}
+/* end of sil */
+
+.light {
+    color: black;
     background: linear-gradient(#87CEFA, #F0F8FF, #FFFAFA);
 }
 
 .dark {
-    color:gainsboro;
-    background-color: black;
-}
-
-.dark div {
-    color: #F5FFFA;
+    color: gainsboro;
     background: linear-gradient(black, black, #191970, #00008B);
 }
 
@@ -43,3 +99,22 @@ h2 {
     margin-left: 20px;
 }
 
+#favList li {
+    padding: 5px;
+    -webkit-box-shadow: 3px 3px 4px 0px rgba(255,255,255,.1);
+    -moz-box-shadow: 3px 3px 4px 0px rgba(255,255,255,.1);
+    box-shadow: 3px 3px 4px 0px rgba(255,255,255,.1);
+}
+
+#favList li a {
+    font-size: 18px;
+    letter-spacing: 0px;
+    word-spacing: 0px;
+    color: inherit;
+    font-weight: normal;
+    text-decoration: none;
+    font-style: normal;
+    font-variant: normal;
+    text-transform: none;
+    background-color: rgba(8, 126, 189, 0.5);
+}
